  * handle avi files produced by dvgrab
  * real media demuxer should handle most files now 
  * real media rv20/rv30 video and cook/sipro/dnet audio should work 
    (except dnet x86 only)
  * real media rtsp protocol streaming support
  * mms input plugin cleanup/bugfixes/improvements
  * syncfb and sdl vo plugins ported
  * quicktime binary-only codec support (highly experimental)
	
xine-lib (1-beta0)
  * fix decoder priority configuration
  * cache available plugins for faster xine loading
  * metronom's improvements for streams with slightly wrong sample rates
  * fix case were XV driver would segfault (YUY2)
  * first xine post effect plugin
  * new version of internal libdvdread fixing some DVD problems
  * longstanding dxr3 bug fixed: for some still menus the highlight did not move
  * asf demuxer fixes
  * fb video output plugin ported to new architecture
  * MPEG-4 file (*.mp4) support
  * closed caption support ported to new architecture
  
xine-lib (1-alpha2)
  * configurable image position
  * DVD menu button highlight position fixes
  * internal engine changes to allow a new layer of post effect plugins
  * VCD playback fixed (actually it was a bug in the real demuxer)
  * pnm input plugin (old real network protocol)
  * real demuxer fixes
  * use binary real codecs to decode rv20/30 video, sipro/cook audio
    (experimental)
  * arts audio output plugin ported to new architecture
  * esound audio output plugin ported to new architecture
	
xine-lib (1-alpha1) 
  * transport stream demuxer fixes
  * DVD playback should be working again (please report DVDs that don't play!)
  * stdin_fifo input plugin
  * vcd input plugin  
  * native Windows Media Audio (a.k.a. WMA, DivX audio) decoding via ffmpeg
  * XviD decoder is working again
  * DV decoder (ffmpeg)

xine-lib (1-alpha0) 

  * dvd plugin replaced by dvdnav with full menu support
  * fix segfault on exit for w32codecs
  * fix yuy2 on xshm bug (affects w32codecs and msvc)
  * reimplemented x/y zoom