@@ -8,7 +8,8 @@
   * mms input plugin cleanup/bugfixes/improvements
   * syncfb and sdl vo plugins ported
   * quicktime binary-only codec support (highly experimental)
-	
+  * MNG demuxer added
+
 xine-lib (1-beta0)
   * fix decoder priority configuration
   * cache available plugins for faster xine loading
